@@ -10,7 +10,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.http.HttpEntity;
@@ -64,7 +63,7 @@ public class CustomClaimConverter implements Converter<Map<String, Object>, Map<
             // Retrieve and set the token
             String token = bearerTokenResolver.resolve(((ServletRequestAttributes) attributes).getRequest());
             HttpHeaders headers = new HttpHeaders();
-            headers.set("Authorization", buildBearer(token));
+            headers.setBearerAuth(token);
 
             // Retrieve user info from OAuth provider if not already loaded
             ObjectNode user = users.get(
@@ -101,25 +100,18 @@ public class CustomClaimConverter implements Converter<Map<String, Object>, Map<
                     }
                 }
                 if (user.has("groups")) {
-                    List<String> groups = StreamSupport
-                        .stream(user.get("groups").spliterator(), false)
-                        .map(JsonNode::asText)
-                        .collect(Collectors.toList());
+                    List<String> groups = StreamSupport.stream(user.get("groups").spliterator(), false).map(JsonNode::asText).toList();
                     convertedClaims.put("groups", groups);
                 }
                 if (user.has(SecurityUtils.CLAIMS_NAMESPACE + "roles")) {
                     List<String> roles = StreamSupport
                         .stream(user.get(SecurityUtils.CLAIMS_NAMESPACE + "roles").spliterator(), false)
                         .map(JsonNode::asText)
-                        .collect(Collectors.toList());
+                        .toList();
                     convertedClaims.put("roles", roles);
                 }
             }
         }
         return convertedClaims;
-    }
-
-    private String buildBearer(String token) {
-        return "Bearer " + token;
     }
 }
